# optris_intrinsic_calibration_tool

./: CMakeLists.txt  LICENSE  README.md
forms/: ConfigDialog.ui  MainWindow.ui
src/: ConfigDialog.cpp  ConfigDialog.h  MainWindow.cpp  MainWindow.h  main.cpp
